syntax = "proto3";

package zksync.config;

enum MerkleTreeMode {
  FULL = 0;
  LIGHTWEIGHT = 1;
}

message MerkleTree {
  optional string path = 1; // optional; fs path
  optional MerkleTreeMode mode = 2; // optional
  optional uint64 multi_get_chunk_size = 3; // optional; ?
  optional uint64 block_cache_size_mb = 4; // optional; MB
  optional uint64 memtable_capacity_mb = 5; // optional; MB
  optional uint64 stalled_writes_timeout_sec = 6; // optional; s
  optional uint64 max_l1_batches_per_iter = 7; // optional
}

message DB {
  optional string state_keeper_db_path = 1; // optional; fs path
  optional MerkleTree merkle_tree = 2; // optional
}

message Postgres {
  optional string master_url = 1; // optional
  optional string replica_url = 2; // optional
  optional string prover_url = 3; // optional
  optional uint32 max_connections = 4; // optional
  optional uint64 statement_timeout_sec = 5; // optional; s
}
